finished part two

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,15 +1,12 @@
-<div class='container-fluid'>
-    <div class="card-group row-fluid">
+<div class='container'>
       <%@cocktails.each do |cocktail|%>
-         <div class="card col-sm-6 col-lg-4">
-          <%=link_to image_tag(cocktail.picture, height: '100', width: '100'), cocktail_path(cocktail), :class => "card-img-top", :alt => "Card image cap"%>
-          <div class="card-block">
-            <h4 class="card-title"><%=cocktail.name%></h4>
-            <%=link_to "Delete", cocktail_path(cocktail), :method => :delete, :class => "btn btn-primary"%>
-            <%=link_to "Edit", edit_cocktail_path(cocktail), :class => "btn btn-primary"%>
-          </div>
+        <div class="card col-sm-6 col-md-3 col-md-2">
+          <%=link_to image_tag(cocktail.picture,:class => "img-responsive card-img"), cocktail_path(cocktail)%>
+          <h4 class="card-title">
+            <%=cocktail.name%>
+          </h4>
+          <%=link_to "Delete", cocktail_path(cocktail), :method => :delete, :class => "btn btn-primary"%>
+          <%=link_to "Edit", edit_cocktail_path(cocktail), :class => "btn btn-primary"%>
          </div>
       <%end%>
-      
-    </div>
 </div>
