--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -5,6 +5,8 @@
   <div class='text-center flex-box'> 
     <%= simple_form_for @cocktail do |cocktail| %>
       <%= cocktail.input :name%>
+      <%= cocktail.input :picture %>
+      <%= cocktail.input :picture_cache, as: :hidden %>
       <%= cocktail.button :submit %>
     <% end %>
   </div>
