--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -6,6 +6,8 @@
 
 <%=link_to "Create a new Dose", new_cocktail_dose_path(@cocktail)%>
 
+<%= cl_image_tag @cocktail.picture, height: 300, width: 400, crop: :fill %>
+
 <%@cocktail.doses.each do |dose|%>
   <%=dose.description%>
 <%end%>
