--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,13 +1,21 @@
-<h1>Cocktail#show</h1>
-<p>Find me in app/views/cocktail/show.html.erb</p>
+
+<div class='cocktail_title'>
+  <h1><strong><%=@cocktail.name%></strong></h1>
+</div>
+<div class='container flex-container'>
+
+  <div class="detail-image background-image img-responsive flex-item"style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path @cocktail.displayed_picture, height: 400, width: 400, crop: :fill %>')">
+  </div>
+  <div class='detail-content text-left'>
+    <ul>
+      <%@cocktail.doses.each do |dose|%>
+        <li><%=dose.description%> de <%=dose.ingredient.name%></li>
+      <%end%>
+    </ul>
+  </div>
+  <div class='bottom-btn'>
+    <h1><%=link_to "Create a new Dose", new_cocktail_dose_path(@cocktail), :class => "btn btn-primary btn-xl"%></h1>  
+  </div>
+</div>
 
 
-<p>Cocktail Name:<%=@cocktail.name%></p>
-
-<%=link_to "Create a new Dose", new_cocktail_dose_path(@cocktail)%>
-
-<%= cl_image_tag @cocktail.picture, height: 300, width: 400, crop: :fill %>
-
-<%@cocktail.doses.each do |dose|%>
-  <%=dose.description%>
-<%end%>
